--- a/week6_2/style/style.css
+++ b/week6_2/style/style.css
@@ -8,17 +8,16 @@ body{
         border: 1px solid violet;
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 3fr 1fr;
-        height: 3400px;
-        width: 1440px;
+        justify-content: center;
+        height: 100vh;
+        width: 100vw;
         font-family: 'Inter', sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 18px;
         color: white;
-
     }
     header{
-
         background-image:url(../assets/10.png) ;
         display: flex;
         flex-direction: column;
@@ -27,14 +26,10 @@ body{
     }
     footer{
         display: grid;
-        grid-template-columns:1fr
-        grid-template-rows:1fr
-        justify-content: space
-        align-items: cen;
+        grid-template-columns:1fr;
+        grid-template-rows:1fr;
         height: 430px;
-        width: 1440px;
         background-color: #0A075F;
-        
     }
     .footer_1{
     display: grid;
@@ -42,7 +37,6 @@ body{
     grid-template-rows: 1fr;
         justify-content: space-evenly;
         align-items:center;
-        width: 1440px;
         height: 350px;
         font-style: normal;
         font-weight: 400;
@@ -56,10 +50,9 @@ body{
     }
     .header_1{
         display: flex;
-        justify-content: center;
+        justify-content:space-around;
         align-content: center;
         height: 70px;
-        width: 1440px;
         box-shadow: 0px 2px 4px rgba(38 ,50 , 56,0.16),0px 2px 16px rgba(38 ,50 , 60, 0.08);
     }
     .header_2{
@@ -68,7 +61,6 @@ body{
         width: 1440px;
         grid-template-columns: 1fr 1fr;
     }
-
     .header_nav{
         display: flex;
         flex-direction: row;
@@ -76,16 +68,13 @@ body{
         align-items: center;
         padding: 10px 20px;
         gap: 10px;
-        margin-left: 600px;
     }
     .header_logo{
         display: flex;
-        justify-content: center;
-        align-items: center;
+        justify-content:flex-start;
+        align-items:center;
         padding: 10px 20px;
-        gap: 10px;
-        
-    }
+        }
     .button_1{
         width: 101px;
         height: 41px;
@@ -288,4 +277,14 @@ border: none;
 background-color:grey; 
 height: 1px; 
 width: 1200px;
+}
+.menu_1 {
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 300;
+}
+li{
+    list-style-type: none; 
 }
